# Handwerk3D

./: .gitignore  CMakeLists.txt  Readme.md  cmake_install.cmake
MathEngine/: CMakeLists.txt
MathEngine/include/: Vector3.h
MathEngine/src/: Vector3.cpp
